--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,86 +1,85 @@
-version: "v1.0"
+version: v1.0
 name: Multi-platform pipeline
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu2004
-
 blocks:
-  - name: "Build for Android"
+  - name: Build for Android
     dependencies: []
     task:
       jobs:
-      - name: "Build"
-        commands:
-          - checkout
-
-  - name: "Build for iOS"
+        - name: Build
+          commands:
+            - checkout
+  - name: Build for iOS
     dependencies: []
+    task:
+      agent:
+        machine:
+          type: a1-standard-4
+          os_image: macos-xcode13
+      jobs:
+        - name: Build
+          commands:
+            - checkout
+  - name: Build for Web
+    dependencies: []
+    task:
+      jobs:
+        - name: Build
+          commands:
+            - checkout
+  - name: Test on Android
+    dependencies:
+      - Build for Android
+    task:
+      jobs:
+        - name: Tests 1/2
+          commands:
+            - checkout
+        - name: Tests 2/2
+          commands:
+            - checkout
+  - name: Test on iOS
+    dependencies:
+      - Build for iOS
     task:
       agent:
         machine:
           type: a1-standard-4
           os_image: macos-xcode12
       jobs:
-      - name: "Build"
-        commands:
-          - checkout
-
-  - name: "Build for Web"
-    dependencies: []
+        - name: Tests
+          commands:
+            - checkout
+  - name: Test on Web
+    dependencies:
+      - Build for Web
     task:
       jobs:
-      - name: "Build"
-        commands:
-          - checkout
-
-  - name: "Test on Android"
-    dependencies: ["Build for Android"]
+        - name: Tests 1/3
+          commands:
+            - checkout
+        - name: Tests 2/3
+          commands:
+            - checkout
+        - name: Tests 3/3
+          commands:
+            - checkout
+  - name: Release
+    dependencies:
+      - Test on Android
+      - Test on iOS
+      - Test on Web
     task:
       jobs:
-      - name: "Tests 1/2"
-        commands:
-          - checkout
-      - name: "Tests 2/2"
-        commands:
-          - checkout
-
-  - name: "Test on iOS"
-    dependencies: ["Build for iOS"]
-    task:
-      agent:
-        machine:
-          type: a1-standard-4
-          os_image: macos-xcode12
-      jobs:
-      - name: "Tests"
-        commands:
-          - checkout
-
-  - name: "Test on Web"
-    dependencies: ["Build for Web"]
-    task:
-      jobs:
-      - name: "Tests 1/3"
-        commands:
-          - checkout
-      - name: "Tests 2/3"
-        commands:
-          - checkout
-      - name: "Tests 3/3"
-        commands:
-          - checkout
-
-  - name: "Release"
-    dependencies: ["Test on Android", "Test on iOS", "Test on Web"]
-    task:
-      jobs:
-      - name: "🚀 Google Play"
-        commands:
-          - checkout
-      - name: "🚀 AppStore"
-        commands:
-          - checkout
-      - name: "🚀 Web"
-        commands:
-          - checkout
+        - name: "\U0001F680 Google Play"
+          commands:
+            - checkout
+        - name: "\U0001F680 AppStore"
+          commands:
+            - checkout
+        - name: "\U0001F680 Web"
+          commands:
+            - checkout
